creating items working

--- a/breifly/breiflyplatform/templates/header.html
+++ b/breifly/breiflyplatform/templates/header.html
@@ -40,6 +40,8 @@
     <script src="{% static 'scripts/ajax_scripts/deleteUser.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/deleteItem.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/updateItem.js' %}"></script>
+    <script src="{% static 'scripts/ajax_scripts/createItem.js' %}"></script>
+    
      <!-- Cookie Statement -->
     {% block extra_js %}
     {% endblock %}
