Download CSV working

--- a/breifly/breiflyplatform/templates/header.html
+++ b/breifly/breiflyplatform/templates/header.html
@@ -41,6 +41,7 @@
     <script src="{% static 'scripts/ajax_scripts/deleteItem.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/updateItem.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/createItem.js' %}"></script>
+    <script src="{% static 'scripts/ajax_scripts/downloadCSV.js' %}"></script>
     
      <!-- Cookie Statement -->
     {% block extra_js %}
