--- a/breifly/breiflyplatform/templates/stock_management.html
+++ b/breifly/breiflyplatform/templates/stock_management.html
@@ -11,7 +11,7 @@
         <a href="#" id="create-item-btn" class="btn btn-sm btn-success mx-1" data-bs-toggle="modal" data-bs-target="#createItemModal">
           Crear nuevo artículo
         </a>
-        <a href="#" class="btn btn-sm btn-secondary mx-1">Descargar CSV</a>
+        <a href="#" onclick="downloadCSV()" class="btn btn-sm btn-secondary mx-1">Descargar CSV</a>
         <a href="#" class="btn btn-sm btn-primary mx-1">Importar CSV</a>
       </div>
     </div>
