--- a/breifly/breiflyplatform/templates/header.html
+++ b/breifly/breiflyplatform/templates/header.html
@@ -42,6 +42,7 @@
     <script src="{% static 'scripts/ajax_scripts/updateItem.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/createItem.js' %}"></script>
     <script src="{% static 'scripts/ajax_scripts/downloadCSV.js' %}"></script>
+    <script src="{% static 'scripts/ajax_scripts/importCSV.js' %}"></script>
     
      <!-- Cookie Statement -->
     {% block extra_js %}
